--- a/styles/architects.css
+++ b/styles/architects.css
@@ -19,6 +19,17 @@
     border: none;
     padding: 20px 25px;
   }
+  main{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  main>section{
+    margin-top: 130px;
+  }
+  .text-primary{
+    color: #FF900E;
+  }
   /* dark 02 */
   .text-gray{
     color: #424242;
@@ -71,13 +82,52 @@
      .banner-image{
       width: 100%;
      }
+     /* feture related style */
+
+     .teams{
+      align-items: center;
+     }
+     .team-img-container{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 24px;
+    
+     }
+     .our-features{
+      margin-left: 70px;
+      max-width: 500px;
+     }
+     .feture-title{
+      font-size: 2.8rem;
+      font-weight: 700;
+     }
+     #quick-list{
+      font-weight: 500;
+     }
 
 
      /* responsive style */
+     /* responsive for smaller version */
      @media screen and (max-width:576px) {
-      .navbar, .nav-links{
+      .navbar, .nav-links, .teams{
         flex-direction: column;
+
+      }
+      .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+      }
+      .our-features{
+        margin-left: 20px;
       }
 
-      
-     }
+      }
+/* responsive for medium */
+@media screen and (min-width:576px) and (max-width:992px) {
+  .teams{
+    flex-direction: column;
+  }
+  .our-features{
+    margin: 50px auto;
+  }
+  
+}
