--- a/styles/architects.css
+++ b/styles/architects.css
@@ -10,6 +10,10 @@
   .display-flex{
     display: flex;
   }
+  .section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+   }
   .btn-primary{
     background-color: #FF900E;
     color: white;
@@ -21,7 +25,7 @@
   }
   main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 0px auto;
   }
 
   main>section{
@@ -97,12 +101,38 @@
       margin-left: 70px;
       max-width: 500px;
      }
-     .feture-title{
-      font-size: 2.8rem;
-      font-weight: 700;
-     }
+     
      #quick-list{
       font-weight: 500;
+     }
+     /* some facts related style */
+     .facts-container{
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+     }
+     .facts-description{
+      max-width: 540px;
+     }
+     .fact-card{
+      border: 1px solid #FF900E;
+      border-radius: 8px;
+      width: 240px;
+      height: 240px;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+     }
+     .fact-number{
+      font-size: 2.8rem;
+      font-weight: 600;
+      margin-top: 5px;
+      margin-bottom: 10px;
+     }
+     .fact-name{
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 5px;
+      margin-bottom: 10px;
      }
 
 
