--- a/styles/architects.css
+++ b/styles/architects.css
@@ -25,7 +25,7 @@
   }
   main{
     max-width: 1440px;
-    margin: 0px auto;
+    margin: 0 auto;
   }
 
   main>section{
@@ -110,8 +110,10 @@
       display: grid;
       grid-template-columns: repeat(4,1fr);
      }
-     .facts-description{
+     .sponsor-info{
       max-width: 540px;
+      margin:50px auto;
+
      }
      .fact-card{
       border: 1px solid #FF900E;
@@ -134,6 +136,19 @@
       margin-top: 5px;
       margin-bottom: 10px;
      }
+     /* sponsor related style */
+     .sponsor-info{
+      max-width: 540px;
+      margin: 50px auto;
+      text-align: center;
+     }
+     .sponsor-companies{
+      display: grid;
+      grid-template-columns: repeat(5,1fr);
+     }
+     .sponsor-companies img{
+      filter: grayscale(100%);
+     }
 
 
      /* responsive style */
@@ -143,11 +158,19 @@
         flex-direction: column;
 
       }
-      .team-img-container{
+      .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1,1fr);
+      }
+      .facts-container{
+        justify-content: center;
+        gap: 24px;
       }
       .our-features{
         margin-left: 20px;
+      }
+      .sponsor-companies{
+        justify-content: center;
+        gap: 50px;
       }
 
       }
@@ -159,5 +182,10 @@
   .our-features{
     margin: 50px auto;
   }
-  
+  .facts-container, .sponsor-companies{
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+       gap: 50px;
+  }
+
 }
