--- a/styles/architects.css
+++ b/styles/architects.css
@@ -105,6 +105,49 @@
      #quick-list{
       font-weight: 500;
      }
+     /* feature section styling */
+
+     .features{
+      gap: 140px;
+     }
+     #feature-section-title{
+      border-left: 5px solid #FF900E;
+      padding-left: 20px;
+     }
+     .feature-card{
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+      margin-bottom: 20px;
+     }
+     .feature-card, .feature-title{
+      font-weight: 600;
+      font-size: 1.25rem;
+      margin-top: 0px;
+      margin-bottom: 0px;
+
+          }
+      #experience-badge{
+        max-width: 342px;
+        height: 200px;
+        padding: 45px 42px;
+        font-size: 1.5rem;
+        font-weight: 500;
+        margin-left: -100px;
+        margin-top: -100px;
+      }
+      #experience-year{
+        font-size: 4rem;
+        font-weight: 700;
+      
+      }
+      .featured-architect img{
+        width: 100%;
+
+      }
+
+
+
      /* some facts related style */
      .facts-container{
       display: grid;
@@ -154,7 +197,7 @@
      /* responsive style */
      /* responsive for smaller version */
      @media screen and (max-width:576px) {
-      .navbar, .nav-links, .teams{
+      .navbar, .nav-links, .features, .teams{
         flex-direction: column;
 
       }
@@ -172,11 +215,18 @@
         justify-content: center;
         gap: 50px;
       }
-
+      #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
       }
+    }
+   
+    
+
+   
 /* responsive for medium */
 @media screen and (min-width:576px) and (max-width:992px) {
-  .teams{
+  .teams, .features{
     flex-direction: column;
   }
   .our-features{
@@ -186,6 +236,10 @@
     grid-template-columns: repeat(2,1fr);
     justify-content: center;
        gap: 50px;
+  }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
   }
 
 }
